# yatzy-refactoring-kata-python

./: .gitignore  README.md  setup.cfg  test_yatzy.py
.github/workflows/: test.yml
src/yatzy_refactoring_kata/: yatzy.py
tests/unit_tests/: test_yatzy.py
